# Transmorpher

./: .gitignore  CHANGELOG.md  README.md
StealthMorpher/: CMakeLists.txt
StealthMorpher/src/: Hooks.cpp  Hooks.h  Logger.h  Morpher.cpp  Morpher.h  Proxy.cpp  SpellMorph.cpp  SpellMorph.h  Utils.cpp  Utils.h  WoWOffsets.h  dinput8_exports.def  dllmain.cpp  forwarders.cpp  version_exports.def
Transmorpher/: Transmorpher.lua  Transmorpher.toc
Transmorpher/Core/: Constants.lua  DLLBridge.lua  EventLoop.lua  MountManager.lua  P2PSync.lua  SlashCommands.lua
Transmorpher/UI/: EnchantSlots.lua  MainFrame.lua
Transmorpher/UI/Tabs/: LoadoutsTab.lua  MiscTab.lua  MorphTab.lua  SettingsTab.lua
Transmorpher/db/: CreatureLookup.lua  HunterPetsDB.lua  MountsDB.lua  PetsDB.lua
Transmorpher/frames/: PreviewList.lua
